--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: MANOR
-Version: 1.5.0
-Date: 2005-11-29
-Title: Micro-Array NORmalization
+Version: 1.5.1
+Date: 2006-09-01
+Title: CGH Micro-Array NORmalization
 Author: Pierre Neuvial <pierre.neuvial@curie.fr>, Philippe Hupé <philippe.hupe@curie.fr>
 Maintainer: Pierre Neuvial <pierre.neuvial@curie.fr>
 Depends: R(>= 1.8.0), GLAD
