--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: MANOR
 Version: 1.7.0
 Date: 2006-09-05
 Title: CGH Micro-Array NORmalization
-Author: Pierre Neuvial <pierre.neuvial@curie.fr>, Philippe Hupé <philippe.hupe@curie.fr>
+Author: Pierre Neuvial <pierre.neuvial@curie.fr>, Philippe Hupe <philippe.hupe@curie.fr>
 Maintainer: Pierre Neuvial <pierre.neuvial@curie.fr>
 Depends: R(>= 1.8.0), GLAD
 Description: We propose importation, normalization, visualization, and
