- added a CHANGELOG ;). - updated outdated reference in the .bib file. - changed the definition of flag "rep.flag" to avoid the error now caused by sd(NA, na.rm=TRUE).
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/MANOR@33608 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/Makefile
+++ b/inst/doc/Makefile
@@ -21,8 +21,10 @@ html: index.dvi
 	$(TEX) $<
 	$(TEX) $<
 
-%.tex: %.Rnw
-	echo "require(MANOR); Sweave(\"$<\")" | R CMD BATCH
+MANOR.tex: MANOR.Rnw
+	echo "require(MANOR); Sweave(\"MANOR.Rnw\")" > tmp.Rnw
+	R CMD BATCH tmp.Rnw
+	rm tmp.Rnw
 
 vignette.tex: MANOR.tex
 	sed -e 's/\\newcommand{\\htmldoc}{}/\\newcommand{\\htmldoc}\[1\]{}/g' -e '/^\\begin{figure}/d' -e '/^\\end{figure}/d' -e '/^\\caption/d' < MANOR.tex > vignette.tex
@@ -41,6 +43,7 @@ clean:
 	rm -f MANOR.dvi MANOR.pdf MANOR.aux MANOR.log MANOR.bbl MANOR.blg MANOR.toc MANOR-*pdf MANOR-*.eps
 	rm -f MANOR-eval*
 	rm -f Rplots.ps
+	rm -f tmp.Rnw
 
 Rnw-eval:
 	sed -e 's/Sinput/verbatim/g' -e 's/Soutput/verbatim/g' -e 's/\\SweaveOpts{echo=FALSE, width=10, height=6, eval=FALSE}/\\SweaveOpts{echo=FALSE, width=10, height=6, eval=TRUE}/g' < MANOR.Rnw > index.Rnw
