Changed biocViews DNACopyNumber to CopyNumberVariants and  SNPsAndGeneticVariability to  SNP, GeneticVariability.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/MANOR@40630 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,4 +10,4 @@ Description: We propose importation, normalization, visualization, and
 	     of variability in array-CGH experiments.
 License: GPL
 URL: http://bioinfo.curie.fr/projects/manor/index.html
-biocViews: Microarray, TwoChannel, DataImport, QualityControl, Preprocessing, DNACopyNumber
+biocViews: Microarray, TwoChannel, DataImport, QualityControl, Preprocessing, CopyNumberVariants
