o Cleaned 'data/flags.RData" which contained objects from an old 'globalenv'. o Updated maintainer's email address.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/MANOR@49859 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: MANOR
-Version: 1.21.0
-Date: 2010-04-13
+Version: 1.21.1
+Date: 2010-10-01
 Title: CGH Micro-Array NORmalization
-Author: Pierre Neuvial <pierre.neuvial@curie.fr>, Philippe Hupe <philippe.hupe@curie.fr>
-Maintainer: Pierre Neuvial <pierre.neuvial@curie.fr>
+Author: Pierre Neuvial <pierre.neuvial@gmail.com>, Philippe Hupe <philippe.hupe@curie.fr>
+Maintainer: Pierre Neuvial <pierre.neuvial@gmail.com>
 Depends: R (>= 1.8.0), GLAD
 Imports: GLAD, graphics, grDevices, stats, utils
 Description: Importation, normalization, visualization, and
