--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: MANOR
-Version: 1.59.0
+Version: 1.59.1
 Date: 2015-05-27
 Title: CGH Micro-Array NORmalization
 Author: Pierre Neuvial <pierre.neuvial@genopole.cnrs.fr>, Philippe Hupe
@@ -14,3 +14,4 @@ License: GPL-2
 URL: http://bioinfo.curie.fr/projects/manor/index.html
 biocViews: Microarray, TwoChannel, DataImport, QualityControl,
         Preprocessing, CopyNumberVariation
+PackageStatus: Deprecated
