--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -72,6 +72,6 @@ jobs:
           path: check
 
       - name: Test coverage
-        if: matrix.config.os == 'ubuntu-16.04' && matrix.config.r == '3.6'
+        if: matrix.config.os == 'ubuntu-16.04' && matrix.config.r == '3.6-9000'
         run: |
           Rscript  -e "install.packages('covr')" -e 'covr::codecov(token = "${{secrets.CODECOV_TOKEN}}")'
