--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,11 +7,11 @@ environment:
   _R_CHECK_FORCE_SUGGESTS_: false
 
   matrix:
-  - R_VERSION: devel
-    R_ARCH: x64
-
-  - R_VERSION: devel
-    R_ARCH: i386
+#  - R_VERSION: devel
+#    R_ARCH: x64
+#
+#  - R_VERSION: devel
+#    R_ARCH: i386
 
   - R_VERSION: release
     R_ARCH: x64
@@ -32,6 +32,7 @@ cache:
 build_script:
   - echo Current directory=%CD%
   - travis-tool.sh install_r knitr rmarkdown bookdown
+  - travis-tool.sh install_bioc DNAcopy
 
 test_script:
   - travis-tool.sh run_tests
