--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: MANOR
-Version: 1.59.3-9000
+Version: 1.59.4
 Date: 2020-04-07
 Title: CGH Micro-Array NORmalization
 Description: Importation, normalization, visualization, and quality
